# werk24-python

./: .coverage  .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  coverage.xml  models.py  nose2.cfg  pyproject.toml  requirements.txt  setup.py  techread.py  techread_client_cli.py  test.json  test_pydantic_validation.py  w24_ask_variant_cad_3bd90b65-190b-4fc3-9479-e7065f425346.dxf  w24_ask_variant_cad_593e9eeb-8300-4e71-a8dd-9f9c033da7b8.dxf  w24_ask_variant_cad_743f511d-8fe2-4553-a271-990477240f48.dxf  w24_ask_variant_cad_8134e273-f502-4976-b650-d8b9bd031810.dxf  w24_ask_variant_cad_b484a58b-31ba-4364-bbe1-587e1c368e40.dxf  w24_ask_variant_cad_ecf49a35-aad7-4420-9e55-3b6ab3d4a9dc.dxf  w24_ask_variant_cad_f48cd63b-df12-403e-b2de-893fb5e37617.dxf  w24cli  w24cli_techread.py  werk24.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  python-publish.yml  python-test.yml  test.yml
.mypy_cache/3.7/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  _types.data.json  _types.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  base64.data.json  base64.meta.json  binascii.data.json  binascii.meta.json  builtins.data.json  builtins.meta.json  cgi.data.json  cgi.meta.json  codecs.data.json  codecs.meta.json  colorsys.data.json  colorsys.meta.json  contextlib.data.json  contextlib.meta.json  contextvars.data.json  contextvars.meta.json  (+90 more)
.mypy_cache/3.7/aiohttp/: __init__.data.json  __init__.meta.json  _helpers.data.json  _helpers.meta.json  abc.data.json  abc.meta.json  base_protocol.data.json  base_protocol.meta.json  client.data.json  client.meta.json  client_exceptions.data.json  client_exceptions.meta.json  client_proto.data.json  client_proto.meta.json  client_reqrep.data.json  client_reqrep.meta.json  client_ws.data.json  client_ws.meta.json  connector.data.json  connector.meta.json  cookiejar.data.json  cookiejar.meta.json  (+70 more)
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
client/: auth_client.py  client.py  client_test.py  cognito_client.py  exceptions.py  techread_client.py  techread_client_cli.py  techread_client_https.py  techread_client_test.py  techread_client_wss.py
examples/: ask_validation_example.py  exception_handling.py  websocket_connection_management.py
models/: architecture.py  ask.py  ask_measures.py  ask_thumbnail.py  ask_thumbnail_canvas.py  ask_thumbnail_drawing.py  ask_thumbnail_page.py  ask_thumbnail_sheet.py  ask_type.py  attachment.py  attachment_drawing.py  attachment_mime_type.py  attachment_model.py  document.py  drawing_read_callback.py  drawing_read_message.py  drawing_read_request.py  drawing_read_response.py  geometry.py  geometry_turning.py  geometry_type.py  measure.py  measure_tolerance.py  overall_dimensions.py  part.py  payload.py  position.py  radius.py  radius_type.py  shape.py  shape_circle.py  shape_hexagon.py  shape_type.py  surface_lay.py  surface_process.py  surface_requirement.py  techread.py  thread_direction.py  unit_length.py  unit_position_quantity.py  (+1 more)
sdk/: client.py  cognito_client.py
sdk/test/: client.py  drawing_read_test.py  ping_test.py
test/: base.py  bug_tests.py  cli_auth_test.py  crypt_test.py  geometric_shape_test.py  requirements.txt  serialization_test.py  techread_auth_client_test.py  techread_client_test.py  techread_page_integration_test.py  techread_page_test.py  techread_titleblock_test.py  test_special_characters.py  utils.py
test/assets/: invalid_creds.werk24  technical_drawing_license.txt  test_model.stp
tests/: conftest.py  requirements.txt  test_ask_custom.py  test_ask_validation.py  test_ask_validation_integration.py  test_cli_status_command.py  test_client.py  test_crypt.py  test_dependency_validation.py  test_exception_types.py  test_logger.py  test_new_exceptions.py  test_priority_error_handling.py  test_priority_message_format.py  test_priority_validation.py  test_python314_compatibility.py  test_system_status.py  test_utils.py  test_websocket_connection_management.py
utils/: create_json_schema.py
werk24/: __init__.py  __main__.py  _version.py  auth_client.py  crypt.py  crypt_utils.py  exceptions.py  license_test.py  techread.py  techread_client.py  techread_client_https.py  techread_client_wss.py  utils.py  w24_techread.py
werk24.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
werk24/cli/: auth.py  health_check.py  support.py  techread.py  techread_test.py  utils.py  w24cli.py  werk24.py
werk24/client/: auth_client.py  techread_client.py  techread_client_https.py  techread_client_wss.py
werk24/gui/: event_feed.py  event_illustrator.py  gdt_table.py  illustrator.py  json_editor.py  measure_table.py  style.py  w24gui.py  worker.py
werk24/integration_tests/: techread_itest.py  techread_test.py
werk24/models/: __init__.py  alphabet.py  angle.py  ask.py  asks.py  attachment.py  attachment_model.py  balloon.py  base.py  base_feature.py  bend.py  bom_table.py  chamfer.py  color.py  complexity.py  date.py  depth.py  drawing_read_response.py  enums.py  feature.py  file_format.py  font.py  fraction.py  gdt.py  gender.py  general_roughness.py  general_roughnesses.py  general_tolerances.py  geometric_shape.py  helpdesk.py  hole_feature.py  icon.py  illustration.py  illustration_type.py  language.py  leader.py  location.py  material.py  material_norm.py  material_normed.py  (+37 more)
werk24/utils/: __init__.py  assets.py  crypt.py  defaults.py  exceptions.py  license.py  license_test.py  logger.py  priority.py
werk24/v1/: __init__.py  auth_client.py  exceptions.py  techread_client.py  techread_client_https.py  techread_client_wss.py  utils.py
werk24/v2/: crypt.py  defaults.py  exceptions.py  license.py  license_test.py  logger.py  techread.py
(+378 files in other folders)
